...
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="List of Locations"/>

        <LinearLayout
                android:id="@+id/cityButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

            <!-- City buttons will be added here dynamically -->
...
